--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 		-webkit-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+	background: #f7f7f7;
 }
 
 .top-navbar > h2 {
@@ -51,4 +52,68 @@
 
 .icon-active {
 	color: #75CAC7;
+}
+
+.input-styles {
+	padding: 10% 5%;
+}
+
+input[type="text"] {
+	width: 90%;
+	padding: 2% 5%;
+	border-radius: 18pt;
+	-webkit-border-radius: 18pt;
+	-moz-border-radius: 18pt;
+	-o-border-radius: 18pt;
+	background: #e9e9ea;
+	margin-bottom: 5%;
+	border: none;
+	color: #8e8e93;
+}
+
+input[type="file"] {
+	width: 45%;
+	padding: 2% 5%;
+	border: none;
+	opacity: 0;
+	z-index: 2;
+}
+
+.input-styles > img {
+	float: right;
+	margin-top: -30px;
+}
+
+.file-pic {
+	width: 40%;
+	padding: 2% 2%;
+	margin-top: -30px;
+	border-radius: 18pt;
+	-webkit-border-radius: 18pt;
+	-moz-border-radius: 18pt;
+	-o-border-radius: 18pt;
+	font-weight: 600;
+	border: 2px dotted #8e8e93;
+	color: #8e8e93;
+	text-align: center; 
+}
+
+button[type="button"] {
+	width: 45%;
+	padding: 2% 5%;
+	background: #75CAC7;
+	border-radius: 18pt;
+	-webkit-border-radius: 18pt;
+	-moz-border-radius: 18pt;
+	-o-border-radius: 18pt;
+	color: #ffffff !important;
+	text-align: center;
+	font-weight: 600;
+	border: none;
+	margin-top: 5%;
+	font-size: 18px;
+}
+
+input {
+	outline: none;
 }
