--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 .bottom-navbar {
 	background: #f4f4f4;
 	bottom: 0;
-	position: absolute;
+	position: fixed;
 	width: 90%;
 	border-top-left-radius: 20px;
 	border-top-right-radius: 20px;
